iter_language/tests/corpus/compose/valid/trigger-watch-kinds-all-three.iter
queue main file { path = "./.iter/queue" }

trigger redundant watch {
    dir = "./src"
    kinds = ["created", "modified", "removed"]
    target = main
}
