iter_language/tests/corpus/compose/invalid/watch-kinds-invalid.iter
queue main file { path = "./.iter/queue" }

trigger bad watch {
    dir = "./src"
    kinds = ["created", "deleted"]
    target = main
}
